--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.11.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
@@ -42,5 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy" : "http://localhost:3001/"
+  "proxy": "http://localhost:3001/"
 }
