--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "mongoose": "^5.13.7",
-    "nodemon": "^1.12.7"
+    "nodemon": "^1.12.7",
+    "react-router-dom": "^6.3.0"
   }
 }
