--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,11 @@
     "antd": "^4.19.5",
     "axios": "^0.26.1",
     "react": "^18.0.0",
+    "react-animated-text": "^0.1.4",
+    "react-basic-scroll": "^1.1.1",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-spinners": "^0.11.0",
