--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "moment": "^2.29.3",
     "mongoose": "^5.13.7",
     "nodemon": "^1.12.7",
     "react-router-dom": "^6.3.0"
