--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.3",
     "moment": "^2.29.3",
     "mongoose": "^5.13.7",
+    "nodemailer": "^6.8.0",
     "nodemon": "^1.12.7",
     "react-router-dom": "^6.3.0"
   }
