Staging for Render Deployment

--- a/client/package.json
+++ b/client/package.json
@@ -52,5 +52,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://hirezen.herokuapp.com/"
+  "proxy": "https://hirezen.onrender.com/"
 }
